<resources>
    <string name="app_name">Group-Up</string>
    <string name="user_profile_details_title">User Profile Details</string>
    <string name="my_groups">My Groups</string>
    <string name="all_groups">ALl Groups</string>
    <string name="title_user_profile">User</string>
    <string name="title_my_groups">My Groups</string>
    <string name="title_all_groups">All Groups</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="resetPassword">Reset password</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="btnEditUser">Edit User Profile</string>
    <string name="edit_user_profile_description">Edit the user profile.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="app_title">GroupUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_details_name">Name:</string>
    <string name="user_details_email">Email:</string>
    <string name="user_details_gender">Gender:</string>
    <string name="user_details_age">Age:</string>
    <string name="user_details_interests">Interests:</string>
    <string name="user_details_other_info">Other info:</string>
    <string name="age">Age</string>
    <string name="other_information">Other Information</string>
    <string name="name">Name</string>
    <string name="other_gender_identity">Other gender identity</string>
    <string name="profile_image">Profile image</string>
    <string name="select_gender">Select gender</string>
    <string name="choose_profile_image">Choose profile image</string>
    <string name="personal_information">Personal Information</string>
    <string name="profile_image_selection">Profile Image Selection</string>
    <string name="about_me">About me</string>
    <string name="group_name">Group name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="group_information">Group Information:</string>
    <string name="relevant_interests">Relevant Interests</string>
    <string name="create_new_group">Create new group</string>
    <string name="description_header">Description:</string>
    <string name="relevant_interests_header">Relevant Interests:</string>
    <string name="location_header">Location:</string>
    <string name="group_header">Group:</string>
    <string name="owner_header">Owner:</string>
    <string name="return_to_list">Return to list</string>
    <string name="search">Search</string>
    <string name="filter_groups">Filter groups</string>
</resources>