<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_user_profile_details"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_user_profile" />

    <item
        android:id="@+id/navigation_my_groups"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_my_groups" />

    <item
        android:id="@+id/navigation_all_groups"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_all_groups" />
    <item
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />

</menu>