<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_user_profile_details">

    <fragment
        android:id="@+id/navigation_user_profile_details"
        android:name="de.rwu.group_up.ui.user_profile.view.UserProfileDetailsFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile_details" >
        <action
            android:id="@+id/action_navigation_home_to_userProfileEditFragment"
            app:destination="@id/navigation_user_profile_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_groups"
        android:name="de.rwu.group_up.ui.my_groups.MyGroupsFragment"
        android:label="@string/title_my_groups"
        tools:layout="@layout/fragment_my_groups" />

    <fragment
        android:id="@+id/navigation_all_groups"
        android:name="de.rwu.group_up.ui.all_groups.AllGroupsFragment"
        android:label="@string/title_all_groups"
        tools:layout="@layout/fragment_all_groups" />
    <fragment
        android:id="@+id/navigation_user_profile_edit"
        android:name="de.rwu.group_up.ui.user_profile.edit.UserProfileEditFragment"
        android:label="UserProfileEditFragment"
        tools:layout="@layout/fragment_user_profile_edit">
        <action
            android:id="@+id/action_userProfileEditFragment_to_navigation_home"
            app:destination="@id/navigation_user_profile_details" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="de.rwu.group_up.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/navigation_login"
            app:destination="@id/navigation_user_profile_details" />
        <action
            android:id="@+id/navigation_register"
            app:destination="@+id/navigation_user_profile_edit"/>
    </fragment>
</navigation>